--- a/src/component/layout/Container.module.css
+++ b/src/component/layout/Container.module.css
@@ -8,3 +8,11 @@
 .min-height {
     min-height: 75vh;
 }
+.start {
+    justify-content: flex-start;
+    width: 100%;
+}
+.column {
+    flex-direction: column;
+    justify-content: flex-start;
+}
